tests/assembler/fail/test1.ial
type Foo
{
    field static const int32 bar;
}
